single album container width fix on tablet

--- a/src/components/Gallery/Album/ItemsByDate/ItemsByDate.scss
+++ b/src/components/Gallery/Album/ItemsByDate/ItemsByDate.scss
@@ -8,10 +8,12 @@
         margin-right: -1rem;
         padding-left: 0;
         font-size: 0;
+        @media (min-width: 768px) {
+            margin-left: -2rem;
+            margin-right: -2rem;
+        }
     }
     &--date {
-        margin-left: -2rem;
-        margin-right: -2rem;
         font-size: 1rem;
         color: $gray;
     }
